--- a/styleGeral.css
+++ b/styleGeral.css
@@ -30,7 +30,7 @@ p{padding-bottom:18px}
 
 /*  topo
 ------------------------------------------------------------------------------------------------------------------*/
-#guardaCabecalho{background:#e9e9e9 url(./images/header-bg.jpg) repeat-x;width:100%;position:fixed;top:0;left:0;z-index:50;display:block}
+#guardaCabecalho{background:#e9e9e9 url(./images/header-bg.jpg) repeat-x;width:100%;position:fixed;top:0;right:0;left:0;z-index:50;display:block}
 #guardaCabecalho header{float:left;width:100%}
 #guardaCabecalhoTopo{float:left;width:100%;padding:10px 0 16px}
 #cabecalhoTopo{margin:0 auto;width:996px}
