--- a/styleGeral.css
+++ b/styleGeral.css
@@ -1,5 +1,5 @@
 ﻿*{margin:0;padding:0;outline:none;}
-body{font:normal 16px Arial;color:#333;background:url(./images/conteudo-bg.png)}
+body{font:normal 16px Arial;color:#333;background:url(./images/conteudo-bg.png);position:relative;overflow-x:hidden}
 ol, ul {list-style: none;}
 a{text-decoration:none;color:#064faa}
 a:hover{text-decoration:underline}
@@ -30,7 +30,7 @@ p{padding-bottom:18px}
 
 /*  topo
 ------------------------------------------------------------------------------------------------------------------*/
-#guardaCabecalho{background:#e9e9e9 url(./images/header-bg.jpg) repeat-x;width:100%;position:fixed;top:0;left:0;z-index:50;display:block}
+#guardaCabecalho{background:#e9e9e9 url(./images/header-bg.jpg) repeat-x;width:100%;position:fixed;top:0;left:0;right:0;clear:both;display:table;z-index:50;display:block}
 #guardaCabecalho header{float:left;width:100%}
 #guardaCabecalhoTopo{float:left;width:100%;padding:10px 0 16px}
 #cabecalhoTopo{margin:0 auto;width:996px}
@@ -135,7 +135,7 @@ p{padding-bottom:18px}
 .lista li{background:url(./images/bullet-check.png) no-repeat;padding:0 0 7px 30px;line-height:22px}
 /* Parallax Scroll */
 /* 
-body{height:20000px;position:relative}
+body{height:20000px}
 #guardaLinhasEscudos{height:100%;background:url(./images/conteudo-bg.png)}
 #guardaContent{position:fixed;top:0;left:0;height:4400px}
 #linhasEscudos{overflow:hidden;width:222px;height:0;right:0}
